--- a/assignment01/report/sections/ex01.tex
+++ b/assignment01/report/sections/ex01.tex
@@ -1,4 +1,4 @@
-\section{Exercise 1}
+\section*{Exercise 1}
 A $2m$-order local interpolating polynomial to $u(x)$ in the neighborhood of $x_j$ given as
 \begin{equation}
 	u(x) = \sum_{k=-m}^m u_{j+k} L_{j+k}(x)
