--- a/assignment01/report/sections/ex02.tex
+++ b/assignment01/report/sections/ex02.tex
@@ -64,6 +64,78 @@ Rewriting the phase error \eqref{eq:6phase_error} in terms of $p$ for $k$ and $\
 	\label{eq:6phase_error_pnu}
 \end{equation}
 If we now perform a leading-order approximation ($p \rightarrow \infty$) this means the terms including $p^{-1}$ become small we can use the Taylor series expansion for $\sin$, which is given by the following formula
+To perform a leading-order approximation as $p \to \infty$, we use the Taylor series expansion for sine:
 \begin{equation}
-	\sin (x)=\sum_{n=0}^{\infty} \frac{(-1)^n}{(2 n+1)!} x^{2 n+1}
+	\sin(x) = \sum_{n=0}^{\infty} \frac{(-1)^n}{(2n + 1)!}x^{2n+1} = x - \frac{x^3}{3!} + \frac{x^5}{5!} - \frac{x^7}{7!} + \ldots \tag{30}
 \end{equation}
+e now expand each sine term in the numerator:
+For $\sin(2\pi p^{-1})$:
+\begin{equation}
+	\sin(2\pi p^{-1}) = 2\pi p^{-1} - \frac{(2\pi p^{-1})^3}{3!} + \frac{(2\pi p^{-1})^5}{5!} - \frac{(2\pi p^{-1})^7}{7!} + \mathcal{O}(p^{-9})
+\end{equation}
+For $\sin(4\pi p^{-1})$:
+\begin{equation}
+	\sin(4\pi p^{-1}) = 4\pi p^{-1} - \frac{(4\pi p^{-1})^3}{3!} + \frac{(4\pi p^{-1})^5}{5!} - \frac{(4\pi p^{-1})^7}{7!} + \mathcal{O}(p^{-9})
+\end{equation}
+For $\sin(6\pi p^{-1})$:
+\begin{equation}
+	\sin(6\pi p^{-1}) = 6\pi p^{-1} - \frac{(6\pi p^{-1})^3}{3!} + \frac{(6\pi p^{-1})^5}{5!} - \frac{(6\pi p^{-1})^7}{7!} + \mathcal{O}(p^{-9})
+\end{equation}
+Now we calcualte the numerator for each term of each order.\newline
+For the first order terms:
+\begin{equation}
+	45\left( 2 \pi p^{-1}\right) - 9\left(4 \pi p^{-1}\right) + \left(6 \pi p^{-1}\right) = (90 - 36 + 6) \pi p^{-1} = 60 \pi p^{-1}
+\end{equation}
+For the third order terms:
+\begin{equation}
+	45\left( 8 \pi^3 p^{-3}\right) - 9\left(64 \pi^3 p^{-3}\right) + \left(216 \pi^3 p^{-3}\right) = (360 - 576 + 216) \pi^3 p^{-3} = 0 \pi^3 p^{-3} = 0
+\end{equation}
+For the fifth order terms:
+\begin{equation}
+	45\left( 32 \pi^5 p^{-5}\right) - 9\left(1024 \pi^5 p^{-5}\right) + \left(7776 \pi^5 p^{-5}\right) = (1440 - 9216 + 7776) \pi^5 p^{-5} = 0 \pi^3 p^{-3} = 0
+\end{equation}
+and seventh order terms:
+\begin{equation}
+	\begin{aligned}
+		 & 45\left(-\frac{128\pi^7}{5040}p^{-7}\right) - 9\left(-\frac{16384\pi^7}{5040}p^{-7}\right) + \left(-\frac{279936\pi^7}{5040}p^{-7}\right) \\
+		 & = -\frac{45 \cdot 128\pi^7}{5040}p^{-7} + \frac{9 \cdot 16384\pi^7}{5040}p^{-7} - \frac{279936\pi^7}{5040}p^{-7}                          \\
+		 & = -\frac{5760\pi^7}{5040}p^{-7} + \frac{147456\pi^7}{5040}p^{-7} - \frac{279936\pi^7}{5040}p^{-7}                                         \\
+		 & = \frac{-5760 + 147456 - 279936}{5040}\pi^7p^{-7}                                                                                         \\
+		 & = \frac{-138240}{5040}\pi^7p^{-7}                                                                                                         \\
+		 & = \frac{-192}{7}\pi^7p^{-7}                                                                                                               \\
+	\end{aligned}
+\end{equation}
+Now, substituting back into our original expression:
+\begin{equation}
+	\begin{aligned}
+		e_6(p, \nu) & = 2 \pi \nu \left|1- \frac{60 \pi p^-{1}}{60 \pi p^-{1} } + \frac{\frac{-192}{7}\pi^7p^{-7}}{(60 \pi p^{-1})}\right| \\
+		            & = 2\pi\nu \left|\frac{192}{420}\pi^6 p^{-6}\right|                                                                   \\
+		            & = 2\pi\nu \left|\frac{16}{35}\pi^6 p^{-6}\right|                                                                     \\
+	\end{aligned}
+\end{equation}
+We can remove the absolute brackets due to p being a large postive number, resulting in the final step:
+\begin{equation}
+	\begin{aligned}
+		e_3(p, \nu) & = 2\pi\nu \frac{16}{35}\pi^6 p^{-6} = \frac{\pi \nu}{70} \left ( \frac{2\pi}{p}\right)^6 \\
+	\end{aligned}
+\end{equation}
+We can use now the obtained equation to derive the number of points per wavelength required to ensure that the phase error is bounded by $\epsilon_3$.
+\begin{equation}
+	\begin{aligned}
+		e_3(p, \nu)                               & = \frac{\pi \nu}{70} \left ( \frac{2\pi}{p} \right)^6 \\
+		\frac{70 e_3(p, \nu)}{\pi \nu}            & =\left ( \frac{2\pi}{p} \right)^6                     \\
+		\frac{70 e_3(p, \nu)}{\pi \nu}            & =\left ( \frac{2\pi}{p} \right)^6                     \\
+		\sqrt[6]{\frac{70 e_3(p, \nu)}{\pi \nu} } & =  \frac{2\pi}{p}                                     \\
+		\sqrt[6]{\frac{70 e_3(p, \nu)}{\pi \nu}}  & = \frac{2\pi}{p}                                      \\
+		p                                         & = 2 \pi \sqrt[6]{\frac{\pi \nu}{70e_3(p, \nu)} }
+	\end{aligned}
+	\label{eq:bound}
+\end{equation}
+Hence the bound is given as
+\begin{equation}
+	p_3(\epsilon_p, \nu) \geq 2 \pi \sqrt[6]{\frac{\pi \nu}{70\epsilon_p} }
+	\label{eq:bound_final}
+\end{equation}
+
+
+
