still small issue with ex03

--- a/assignment01/report/main.tex
+++ b/assignment01/report/main.tex
@@ -16,6 +16,7 @@
 \usepackage{amsmath}
 \usepackage{booktabs} % For professional table formatting
 \usepackage{appendix}
+\usepackage{multirow}
 \usepackage{pdfpages} % Package to include PDF pages
 
 \usepackage{hyperref}
