introduced boost lib for better precision

--- a/assignment01/report/sections/ex03.tex
+++ b/assignment01/report/sections/ex03.tex
@@ -1,23 +1,18 @@
-\section*{Exercise 3}
-\begin{table}[H]
+\begin{table}[h]
     \centering
     \begin{tabular}{|c|c|c|}
         \hline
-        $k$ & Minimum $N$ & Max Relative Error \\
+        $k$ & Minimum $N$ & Max Relative Error \\ 
         \hline
-        2 & 22 & $3.78 \cdot 10^{-6}$ \\
-        \hline
-        4 & 32 & $5.62 \cdot 10^{-6}$ \\
-        \hline
-        6 & 42 & $4.12 \cdot 10^{-6}$ \\
-        \hline
-        8 & 52 & $2.44 \cdot 10^{-6}$ \\
-        \hline
-        10 & 60 & $6.44 \cdot 10^{-6}$ \\
-        \hline
-        12 & 80 & $1.67 \cdot 10^{-5}$ \\
+        2  & 22  & $3.7751 \times 10^{-6}$ \\ 
+        4  & 32  & $5.6209 \times 10^{-6}$ \\ 
+        6  & 42  & $4.1225 \times 10^{-6}$ \\ 
+        8  & 52  & $2.4255 \times 10^{-6}$ \\ 
+        10 & 60  & $7.8919 \times 10^{-6}$ \\ 
+        12 & 70  & $3.8702 \times 10^{-6}$ \\ 
         \hline
     \end{tabular}
-    \caption{Relationship between $k$ values, minimum $N$ requirements, and maximum relative errors}
-    \label{tab:numerical_results}
+    \caption{Minimum $N$ required to achieve a max relative error below a given threshold.}
+    \label{tab:fourier_accuracy}
 \end{table}
+
