--- a/assignment01/report/sections/ex03.tex
+++ b/assignment01/report/sections/ex03.tex
@@ -37,4 +37,4 @@ Table~\ref{tab:fourier_accuracy} shows the minimum number of grid points needed 
 \end{table}
 The results show that the number of grid points required to achieve the specified accuracy increases approximately linearly with $k$. This can be explained by the fact that larger values of $k$ lead to more oscillatory functions. To accurately capture these higher frequencies, a finer grid resolution is necessary.\newline
 \newline
-I implemented this exercise in C++ (more details can be found in the README.md file). For higher values of kk, computing the relative error reaches the limits of floating-point precision due to the extremely small magnitude of the error. Depending on the machine and operating system, slight variations in results can be expected. To mitigate this issue, I used the Boost library and introduced a specialized double type with 50 bits of precision.
+I implemented this exercise in C++ (more details can be found in the README.md file). For higher values of $k$, computing the relative error reaches the limits of floating-point precision due to the extremely small magnitude of the error. Depending on the machine and operating system, slight variations in results can be expected. To mitigate this issue, I used the Boost library and introduced a specialized double type with 50 bits of precision.
